# mkdocs-apidoc

./: .readthedocs.yaml  404.html  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pythonpublish.yml  run_tests.yml
auto/: index.html
config/: index.html
docs/: README.md  auto.md  config.md  index.md  models.md  render.md  requirements.txt
mkdocs_apidoc/: __init__.py  auto.py  collect.py  config.py  docstring.py  example_module.py  inspections.py  log.py  models.py  parse_numpy.py  parser.py  plugin.py  render.py
models/: index.html
render/: index.html
search/: search_index.json
tests/: example_doc.md  example_module.py  test_docstring.py  test_mkdocs_apidoc.py
