[tool.poetry]
name = "mkdocs-apidoc"
version = "0.1.0"
description = ""
authors = ["Evan <ecurtin2@illinois.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
jinja2 = "^2.10"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
flake8 = "^3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
