[tool.poetry]
name = "mkdocs-apidoc"
version = "0.2.3"
description = ""
authors = ["Evan <evanmcurtin@gmail.com>"]

[tool.poetry.plugins."mkdocs.plugins"]
mkdocs_apidoc = "mkdocs_apidoc.plugin:ApiDocPlugin"

[tool.poetry.dependencies]
python = "^3.8"
jinja2 = "^2.10"
mkdocs = "^1.1"
attrs = "^20.2.0"
tabulate = "^0.8.7"

[tool.poetry.dev-dependencies]
pytest = "^6.0"
isort = "^4.3"
black = "^20.8b1"
mkdocs-material = "^5.5"
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v"
testpaths = [
    "tests"
][build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"


